[package]
name = "imagedt"
version = "0.1.0"
authors = ["David Sunshine <david@sunshines.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Normal dependencies
[dependencies]
kamadak-exif = "0.5.2"
chrono = "0.4.19"

# Development dependencies
[dev-dependencies]
walkdir = "2.3.1"
